<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".cardSetup.presentation.cardListSelected.CardListSelectedFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        app:layout_constraintGuide_percent="0.05"
        style="@style/guideLineVerticalStart" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        app:layout_constraintGuide_percent="0.95"
        style="@style/guideLineVerticalEnd" />
    <TextView
        android:id="@+id/textView5"
        android:text="@string/cardListSelec_Title1"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/cardListTitle1" />

    <TextView
        android:id="@+id/textView6"
        android:text="@string/cardListSelec_Title2"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        style="@style/cardListTitle2" />

    <TextView
        android:id="@+id/textView7"
        android:text="@string/cardListSelec_Title3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        style="@style/cardListTitle3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCardListSelec"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/materialButtonCardListSelec"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonCardListSelec"
        style="@style/cardListButtonStyle"
        android:text="@string/cardListAvail_button"
        android:textAlignment="center"
        android:textAppearance="@style/TextStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>