<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".cardSetup.presentation.cardListAvailable.CardListAvailableFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            app:layout_constraintGuide_percent="0.05"
            style="@style/guideLineVerticalStart" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            app:layout_constraintGuide_percent="0.95"
            style="@style/guideLineVerticalEnd" />

        <TextView
            android:id="@+id/tv_card_list_available_title"
            android:text="@string/cardListAvail_Title1"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/cardListTitle1" />

        <TextView
            android:id="@+id/tv_card_list_available_subtitle"
            android:text="@string/cardListAvail_Title2"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_list_available_title"
            style="@style/cardListTitle2" />

        <TextView
            android:id="@+id/tv_card_list_available_description"
            android:text="@string/cardListAvail_Title3"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_list_available_subtitle"
            style="@style/cardListTitle3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_card_list_available"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/btn_card_list_available_continue"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_list_available_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_card_list_available_continue"
            style="@style/cardListButtonStyle"
            android:text="@string/cardListAvail_button"
            android:textAlignment="center"
            android:textAppearance="@style/TextStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start" />

    </androidx.constraintlayout.widget.ConstraintLayout>